use Java14 "pattern matching" preview feature